src/test/deca/context/invalid/SansObjet/DeclVar-NOT-float-string.deca
// Description:
//    Declaration of a float variable using ! operation on a string variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.37) Illegal operand type..
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "Hello"; 
    float z = !"Hello" ; 
}
